Arreglo de margen en html.

--- a/B1-1-Arrow-Functions/Nivel-1/index.html
+++ b/B1-1-Arrow-Functions/Nivel-1/index.html
@@ -8,6 +8,7 @@
     <title>Bloque 1.1</title>
     <style>
         body {
+            margin-left: 20px;
             font-family: Arial;
         }
     </style>
