--- a/B1-4-Rest&Spread-Operators/Nivel-1/index.html
+++ b/B1-4-Rest&Spread-Operators/Nivel-1/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Propietario" content="Gustavo Mujica Sprint 2.1">
-    <title>Bloque 1.1</title>
+    <title>Bloque 1.4</title>
     <style>
         body {
+            margin-left: 20px;
             font-family: Arial;
         }
     </style>        
