--- a/B1-2-Operador-Ternario/Nivel-1/index.html
+++ b/B1-2-Operador-Ternario/Nivel-1/index.html
@@ -8,6 +8,7 @@
     <title>Bloque 1.2</title>
     <style>
         body {
+            margin-left: 20px;
             font-family: Arial;
         }
     </style>
