--- a/B1-3-Callbacks/Nivel-3/index.html
+++ b/B1-3-Callbacks/Nivel-3/index.html
@@ -8,6 +8,7 @@
     <title>Bloque 1.3</title>
     <style>
         body {
+            margin-left: 20px;
             font-family: Arial;
         }
     </style>
