Corrección de útima hora en la explicación del ejercicio. Ampliación de la explicación del Sprint.

--- a/B1-7-Promises&AsyncAwait/Nivel-1/index.html
+++ b/B1-7-Promises&AsyncAwait/Nivel-1/index.html
@@ -37,7 +37,7 @@
     
     <h2>Ejercicio 3</h2>
     <h3>Promise con Reject</h3>
-    <p>La promesa se rechaza si el input no es hola!</p>
+    <p>La promesa se rechaza si el input no es exactamente la palabra:Hola!</p>
 
     <input type="text" id="inputPromesa" placeholder="Prueba">
     <button id="btnPromesa2">Activar Promesa</button>
