Corrección de un error de texto descriptivo.

--- a/B1-4-Rest&Spread-Operators/Nivel-3/index.html
+++ b/B1-4-Rest&Spread-Operators/Nivel-3/index.html
@@ -21,7 +21,7 @@
     <hr>
     <h2>Ejercicio 5</h2>
     <h3>Spread en Funciones.</h3>
-    <p>El operador Spread en esta funciçón nos permite pasar los elementosde un arary como argumentos individuales a una función.</p>       
+    <p>El operador Spread en esta función nos permite pasar los elementos de un arary como argumentos individuales a una función.</p>       
     
     <p>Para ver el resultado abre la consola del navegador antes de hacer 'Click' en el botón "Semáforo".</p>
     
